test for main branch protection

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Working with teams</title>
-</head>
-<body>
-  <h1>Contributors</h1>
-  <p>Filipe</p>
-  <p>Isabela</p>
-  <p>Michele</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Working with teams</title>
+  </head>
+  <body>
+    <h1>Contributors</h1>
+    <p>Filipe</p>
+    <p>Isabela</p>
+    <p>Michele</p>
+    <p>some text</p>
+  </body>
 </html>
